--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/react": "^2.3.4",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@tanstack/react-query": "^4.6.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -16,7 +16,7 @@
     "@types/react-dom": "^18.0.0",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
-    "framer-motion": "^7.3.6",
+    "framer-motion": "^6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -47,6 +47,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3003"
-
+  "proxy": "http://localhost:3003",
+  "devDependencies": {
+    "tailwindcss": "^3.1.8"
+  }
 }
