--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -19,6 +19,8 @@
   "baseUrl": ".",
 	"paths": {
 		"@/*": ["src/*"],
+		"@customChakra/*": ["src/components/chakra/*"],
+		"@customChakra": ["src/components/chakra/"],
 	},
 
 	"include": ["src"]
