feat: server ready to be deployed

--- a/.gitignore
+++ b/.gitignore
@@ -108,6 +108,7 @@ web_modules/
 # Next.js build output
 .next
 out
+build
 
 # Nuxt.js build / generate output
 .nuxt
@@ -150,3 +151,5 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+.vscode/
+tmp/
