--- a/client/package.json
+++ b/client/package.json
@@ -1,54 +1,108 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@chakra-ui/react": "^2.3.4",
-    "@emotion/react": "^11",
-    "@emotion/styled": "^11",
-    "@tanstack/react-query": "^4.6.0",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
-    "@types/node": "^18.7.21",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "axios": "^0.27.2",
-    "cors": "^2.8.5",
-    "framer-motion": "^6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "proxy": "http://localhost:3003",
-  "devDependencies": {
-    "tailwindcss": "^3.1.8"
-  }
+    "name": "client",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@chakra-ui/react": "^2.5.1",
+        "@emotion/react": "^11",
+        "@emotion/styled": "^11",
+        "@tanstack/react-query": "^4.6.0",
+        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/react": "^13.0.0",
+        "@testing-library/user-event": "^13.2.1",
+        "@types/jest": "^27.0.1",
+        "@types/node": "^18.14.0",
+        "@types/react": "^18.0.0",
+        "@types/react-dom": "^18.0.0",
+        "axios": "^0.27.2",
+        "cors": "^2.8.5",
+        "framer-motion": "^6",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-scripts": "5.0.1",
+        "typescript": "^4.4.2",
+        "web-vitals": "^2.1.0"
+    },
+    "devDependencies": {
+        "@babel/core": "7.17.9",
+        "@babel/plugin-transform-runtime": "^7.17.0",
+        "@babel/preset-env": "^7.16.11",
+        "@babel/preset-react": "^7.16.7",
+        "@babel/preset-typescript": "^7.16.7",
+        "@babel/register": "^7.17.7",
+        "@svgr/webpack": "^6.2.1",
+        "@testing-library/dom": "^8.13.0",
+        "@testing-library/jest-dom": "^5.16.4",
+        "@testing-library/react": "12.1.2",
+        "@testing-library/user-event": "^13.5.0",
+        "@types/babel__core": "^7.1.19",
+        "@types/dotenv-webpack": "^7.0.7",
+        "@types/jest": "^28.1.6",
+        "@types/loadable__component": "^5.13.4",
+        "@types/styled-components": "^5.1.25",
+        "@typescript-eslint/eslint-plugin": "^5.18.0",
+        "@typescript-eslint/parser": "^5.18.0",
+        "babel-jest": "^27.5.1",
+        "babel-loader": "^8.2.4",
+        "clean-webpack-plugin": "^4.0.0",
+        "compression-webpack-plugin": "^9.2.0",
+        "css-loader": "^6.7.1",
+        "css-minimizer-webpack-plugin": "^3.4.1",
+        "dotenv-webpack": "^7.1.0",
+        "eslint": "8.0.0",
+        "eslint-plugin-react": "^7.30.1",
+        "eslint-webpack-plugin": "^3.1.1",
+        "file-loader": "^6.2.0",
+        "glob-all": "^3.3.0",
+        "html-loader": "^3.1.0",
+        "html-webpack-plugin": "^5.5.0",
+        "jest": "^28.1.3",
+        "jest-css-modules-transform": "^4.4.2",
+        "jest-environment-jsdom": "^28.1.3",
+        "mini-css-extract-plugin": "2.5.3",
+        "node-fetch": "^3.2.10",
+        "os-browserify": "^0.3.0",
+        "path-browserify": "^1.0.1",
+        "prettier": "^2.5.1",
+        "sass": "^1.52.3",
+        "sass-loader": "^13.0.0",
+        "style-loader": "^3.3.1",
+        "svg-url-loader": "^7.1.1",
+        "terser-webpack-plugin": "^5.3.1",
+        "ts-jest": "^28.0.7",
+        "ts-loader": "^9.2.8",
+        "ts-node": "^10.9.1",
+        "tsconfig-paths": "^3.14.1",
+        "tsconfig-paths-webpack-plugin": "^3.5.2",
+        "uglify-js": "^3.15.4",
+        "webpack": "^5.72.0",
+        "webpack-bundle-analyzer": "^4.5.0",
+        "webpack-cli": "^4.8.0",
+        "webpack-dev-server": "^4.8.1"
+    },
+    "scripts": {
+        "start": "webpack-dev-server --progress",
+        "build": "webpack",
+        "test": "jest tests/",
+        "lint": "eslint --ext .js,.jsx,.ts,.tsx src/"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "proxy": "http://localhost:3003"
 }
